; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-octeon-core.c_octeon_i2c_get_scl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-octeon-core.c_octeon_i2c_get_scl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32 }
%struct.octeon_i2c = type { i32 }

@TWSI_INT_SCL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_adapter*)* @octeon_i2c_get_scl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @octeon_i2c_get_scl(%struct.i2c_adapter* %0) #0 {
  %2 = alloca %struct.i2c_adapter*, align 8
  %3 = alloca %struct.octeon_i2c*, align 8
  %4 = alloca i32, align 4
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %2, align 8
  %5 = load %struct.i2c_adapter*, %struct.i2c_adapter** %2, align 8
  %6 = call %struct.octeon_i2c* @i2c_get_adapdata(%struct.i2c_adapter* %5)
  store %struct.octeon_i2c* %6, %struct.octeon_i2c** %3, align 8
  %7 = load %struct.octeon_i2c*, %struct.octeon_i2c** %3, align 8
  %8 = call i32 @octeon_i2c_read_int(%struct.octeon_i2c* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @TWSI_INT_SCL, align 4
  %11 = and i32 %9, %10
  ret i32 %11
}

declare dso_local %struct.octeon_i2c* @i2c_get_adapdata(%struct.i2c_adapter*) #1

declare dso_local i32 @octeon_i2c_read_int(%struct.octeon_i2c*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
